--- a/index.html
+++ b/index.html
@@ -5,6 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
+    <link rel="stylesono-tebe-nado" href="./fonts/fonts.css"/>
+    <link rel="stylesono-tebe-nado" href="./styles/style.css"/>
+    <link rel="stylesono-tebe-nado" href="./styles/global.css"/>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav>
+        <ul>
+          <li>
+            <a>главная</a>
+          </li>
+          <li>
+            <a href="#0">посмотреть лоты</a>
+          </li>
+          <li>
+            <a href="#0">об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+      <a>
+        <img
+        src="./images/logo-black.svg"
+        alt="логотип проета 'оно тебе надо'"
+        />
+      </a>
+      <address>
+        <a href="tel:+99995555555">+ 9 999 555 5555</a>
+        <br><a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <br><span>наб. Принсенграхт 263-265, Амстердам</span>
+      </address>
+    </header>
+  </body>
 </html>
