--- a/index.html
+++ b/index.html
@@ -10,31 +10,42 @@
     <link rel="stylesono-tebe-nado" href="./styles/global.css"/>
   </head>
   <body>
-    <header>
-      <nav>
-        <ul>
-          <li>
+    <header class="header">
+      <nav class="header__menu">
+        <ul class="header__links-list">
+          <li class="header__links-list-item">
             <a>главная</a>
           </li>
-          <li>
-            <a href="#0">посмотреть лоты</a>
+          <li class="header__links-list-item">
+            <a class="header__link_active" 
+            href="#0">посмотреть лоты</a>
           </li>
-          <li>
-            <a href="#0">об аукционе</a>
+          <li class="header__links-list-item">
+            <a class="header__link_active" 
+            href="#0">об аукционе</a>
           </li>
         </ul>
       </nav>
-      <a>
+      <a class="header__logo">
         <img
+        class="header__logo-image"
         src="./images/logo-black.svg"
         alt="логотип проета 'оно тебе надо'"
         />
       </a>
-      <address>
-        <a href="tel:+99995555555">+ 9 999 555 5555</a>
+      <address class="address">
+        <section class="header__address">
+          <a href="tel:+99995555555">+ 9 999 555 5555</a>
         <br><a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
         <br><span>наб. Принсенграхт 263-265, Амстердам</span>
+        </section>
       </address>
     </header>
+    <main>
+
+    </main>
+    <footer>
+      
+    </footer>
   </body>
 </html>
