--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-    <link rel="stylesono-tebe-nado" href="./fonts/fonts.css"/>
-    <link rel="stylesono-tebe-nado" href="./styles/style.css"/>
-    <link rel="stylesono-tebe-nado" href="./styles/global.css"/>
+    <link rel="stylesheet" href="./styles/global.css"/>
+    <link rel="stylesheet" href="./fonts/fonts.css"/>
+    <link rel="stylesheet" href="./styles/style.css"/>
   </head>
   <body>
     <header class="header">
       <nav class="header__menu">
-        <ul class="header__links-list">
+        <ul  type="circle" class="header__links-list">
           <li class="header__links-list-item">
             <a>главная</a>
           </li>
@@ -26,13 +26,15 @@
           </li>
         </ul>
       </nav>
-      <a class="header__logo">
-        <img
-        class="header__logo-image"
-        src="./images/logo-black.svg"
-        alt="логотип проета 'оно тебе надо'"
-        />
-      </a>
+      <section>
+        <a class="header__logo">
+          <img
+          class="header__logo-image"
+          src="./images/logo-black.svg"
+          alt="логотип проекта 'оно тебе надо'"
+          />
+        </a>
+      </section>
       <address class="address">
         <section class="header__address">
           <a href="tel:+99995555555">+ 9 999 555 5555</a>
