--- a/index.html
+++ b/index.html
@@ -12,17 +12,15 @@
   <body>
     <header class="header">
       <nav class="header__menu">
-        <ul  type="circle" class="header__links-list">
-          <li class="header__links-list-item">
+        <ul type="circle" class="header__links-list">
+          <li class="header__links-list-item  header__link_active">
             <a>главная</a>
           </li>
           <li class="header__links-list-item">
-            <a class="header__link_active" 
-            href="#0">посмотреть лоты</a>
+            <a href="#0">посмотреть лоты</a>
           </li>
           <li class="header__links-list-item">
-            <a class="header__link_active" 
-            href="#0">об аукционе</a>
+            <a href="#0">об аукционе</a>
           </li>
         </ul>
       </nav>
@@ -35,11 +33,13 @@
           />
         </a>
       </section>
-      <address class="address">
-        <section class="header__address">
-          <a href="tel:+99995555555">+ 9 999 555 5555</a>
-        <br><a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-        <br><span>наб. Принсенграхт 263-265, Амстердам</span>
+      <address class="header__address">
+        <section>
+          <a href="tel:+99995555555" class="address">+ 9 999 555 5555</a>
+        <br>
+        <a href="mailto:info@sobaka.ge" class="address">info@sobaka.ge</a>
+        <br>
+        <span>наб. Принсенграхт 263-265, Амстердам</span>
         </section>
       </address>
     </header>
