--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="header">
       <nav class="header__menu">
         <ul type="circle" class="header__links-list">
-          <li class="header__links-list-item  header__link_active">
+          <li class="header__links-list-item header__link_active">
             <a>главная</a>
           </li>
           <li class="header__links-list-item">
@@ -44,7 +44,11 @@
       </address>
     </header>
     <main>
-
+      <img 
+      class="image_lotus"
+      src="./images/cover.jpg"
+      alt="картина нарисованная маслом 'лотосы'"
+      > 
     </main>
     <footer>
       
