--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
     <link rel="stylesheet" href="./styles/global.css"/>
     <link rel="stylesheet" href="./fonts/fonts.css"/>
@@ -12,7 +12,7 @@
   <body>
     <header class="header">
       <nav class="header__menu">
-        <ul type="circle" class="header__links-list">
+        <ul class="header__links-list">
           <li class="header__links-list-item header__link_active">
             <a>главная</a>
           </li>
@@ -44,11 +44,19 @@
       </address>
     </header>
     <main>
-      <img 
-      class="image_lotus"
-      src="./images/cover.jpg"
-      alt="картина нарисованная маслом 'лотосы'"
-      > 
+      <section class="cover">
+        <div class="overlay"></div>
+      <h1 class="cover__title">
+        <span class="letter-spacing-extended aligned-text">O</span>
+        <span class="aligned-text">НО</span>
+        <span class="aligned-text_center">ТЕБ</span>
+        <span class="letter-spacing-extended aligned-text_center">Е</span>
+        <span class="letter-spacing-extended aligned-text_right">Н</span>
+        <span class="aligned-text_right">АД</span>
+        <span class="no-letter-spacing">O</span>
+      </h1>
+      </section>
+      
     </main>
     <footer>
       
