made a header block

--- a/index.html
+++ b/index.html
@@ -24,14 +24,12 @@
           </li>
         </ul>
       </nav>
-      <section>
-        <a class="header__logo">
-          <img
-          class="header__logo-image"
-          src="./images/logo-black.svg"
-          alt="логотип проекта 'оно тебе надо'"
-          />
-        </a>
+      <section class="header__logo">
+        <img
+        class="header__logo-image"
+        src="./images/logo-black.svg"
+        alt="логотип проекта 'оно тебе надо'"
+        />
       </section>
       <address class="header__address">
         <section>
@@ -47,14 +45,14 @@
       <section class="cover">
         <div class="overlay"></div>
       <h1 class="cover__title">
-        <span class="letter-spacing-extended aligned-text">O</span>
-        <span class="aligned-text">НО</span>
-        <span class="aligned-text_center">ТЕБ</span>
-        <span class="letter-spacing-extended aligned-text_center">Е</span>
-        <span class="letter-spacing-extended aligned-text_right">Н</span>
-        <span class="aligned-text_right">АД</span>
-        <span class="no-letter-spacing">O</span>
+        o<span class="letter-spacing-extended">но</span>
+        <span class="aligned-text aligned-text_center">те<span class="letter-spacing-extended">бе</span></span>
+        <span class="aligned-text aligned-text_right"><span class="letter-spacing-extended">н</span>ад<span class="no-letter-spacing">о</span></span>
       </h1>
+      <div class="cover__description">
+        <p class="cover__description-text">Аукцион    вещей,    в    которые    никто    не     верил</p>
+        <button class="bet-button">сделать ставку</button>
+      </div>
       </section>
       
     </main>
