--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </section>
       <address class="header__address">
         <section>
-          <a href="tel:+99995555555" class="address">+ 9 999 555 5555</a>
+        <a href="tel:+99995555555" class="address">+ 9 999 555 5555</a>
         <br>
         <a href="mailto:info@sobaka.ge" class="address">info@sobaka.ge</a>
         <br>
@@ -47,12 +47,57 @@
       <h1 class="cover__title">
         o<span class="letter-spacing-extended">но</span>
         <span class="aligned-text aligned-text_center">те<span class="letter-spacing-extended">бе</span></span>
-        <span class="aligned-text aligned-text_right"><span class="letter-spacing-extended">н</span>ад<span class="no-letter-spacing">о</span></span>
+        <span class="aligned-text aligned-text_right">
+        <span class="letter-spacing-extended">н</span>ад<span class="no-letter-spacing">о</span></span>
       </h1>
       <div class="cover__description">
         <p class="cover__description-text">Аукцион    вещей,    в    которые    никто    не     верил</p>
         <button class="bet-button">сделать ставку</button>
       </div>
+      </section>
+      <section class="lots">
+        <h2 class="lots__heading">Лоты</h2>
+        <ul class="lots__card-list">
+          <li class="lots__card-list-item">
+            <a class="card-link">
+              <div class="overlay"></div>
+              <article class="card_type_film">
+                <h2 class="card__title">Фильм режиссёра, который  бросил киношколу</h2>
+                <p class="card__text">Не просто бросил, а ушёл с первой лекции. 
+                Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?
+                </p>
+              </article>
+            </a>
+          </li>
+          <li class="lots__card-list-item">
+            <a class="card-link">
+              <div class="overlay"></div>
+              <article class="card_type_book">
+                <h2 class="card__title">Книга, где описан один скучный день из жизни рекламного агента</h2>
+                <p class="card__text">Объёмом почти в тысячу страниц. 
+                  Иногда без знаков препинания и с переходами на древнеанглийский. 
+                  В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, 
+                  начиная с античных времён.
+                  И это всё накладывается на эпическую поэму Гомера. 
+                  Сколько бы вы поставили на «Улисса» Джеймса Джойса?
+                </p>
+              </article>
+            </a>
+            <li class="lots__card-list-item">
+              <a class="card-link">
+                <div class="overlay"></div>
+                <article class="card_type_picture">
+                  <h2 class="card__title">Картина, которую повторит даже 5-летний сын маминой подруги</h2>
+                  <p class="card__text">Ну действительно, там линия, тут кружочек, 
+                    а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, 
+                    лесов, котиков… Сколько бы вы на такое поставили, если бы не знали, 
+                    что это — одна из революционных работ Кандинского?
+                  </p>
+                </article>
+              </a>
+             </li>
+        </ul>
+        
       </section>
       
     </main>
