--- a/index.html
+++ b/index.html
@@ -25,11 +25,13 @@
         </ul>
       </nav>
       <section class="header__logo">
-        <img
-        class="header__logo-image"
-        src="./images/logo-black.svg"
-        alt="логотип проекта 'оно тебе надо'"
-        />
+        <a> 
+          <img
+          class="header__logo-image"
+          src="./images/logo-black.svg"
+          alt="логотип проекта 'оно тебе надо'"
+          />
+        </a>
       </section>
       <address class="header__address">
         <section>
@@ -61,7 +63,7 @@
           <li class="lots__card-list-item">
             <a class="card-link">
               <div class="overlay"></div>
-              <article class="card_type_film">
+              <article class=" card card_type_film">
                 <h2 class="card__title">Фильм режиссёра, который  бросил киношколу</h2>
                 <p class="card__text">Не просто бросил, а ушёл с первой лекции. 
                 Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?
@@ -72,7 +74,7 @@
           <li class="lots__card-list-item">
             <a class="card-link">
               <div class="overlay"></div>
-              <article class="card_type_book">
+              <article class=" card card_type_book">
                 <h2 class="card__title">Книга, где описан один скучный день из жизни рекламного агента</h2>
                 <p class="card__text">Объёмом почти в тысячу страниц. 
                   Иногда без знаков препинания и с переходами на древнеанглийский. 
@@ -86,7 +88,7 @@
             <li class="lots__card-list-item">
               <a class="card-link">
                 <div class="overlay"></div>
-                <article class="card_type_picture">
+                <article class=" card card_type_picture">
                   <h2 class="card__title">Картина, которую повторит даже 5-летний сын маминой подруги</h2>
                   <p class="card__text">Ну действительно, там линия, тут кружочек, 
                     а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, 
