--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-    <link rel="stylesheet" href="./styles/global.css" />
-    <link rel="stylesheet" href="./fonts/fonts.css" />
-    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./styles/global.css"/>
+    <link rel="stylesheet" href="./fonts/fonts.css"/>
+    <link rel="stylesheet" href="./styles/style.css"/>
   </head>
   <body>
     <header class="header">
@@ -49,8 +49,8 @@
         <h1 class="cover__title">
           o<span class="letter-spacing-extended">но</span>
           <span class="aligned-text aligned-text_center"
-            >те<span class="letter-spacing-extended">бе</span></span
-          >
+            >те<span class="letter-spacing-extended">бе</span>
+          </span>
           <span class="aligned-text aligned-text_right">
             <span class="letter-spacing-extended">н</span>ад<span
               class="no-letter-spacing"
@@ -120,7 +120,44 @@
         </ul>
         <a class="lots__look-more-link" href="#0">посмотреть больше</a>
       </section>
+      <section class="about about__column">
+        <div class="about__logo">
+          <img
+            class="about__logo-image"
+            src="./images/logo-white.svg"
+            alt="логотип проекта 'оно тебе надо'"
+          />
+        </div>
+        <h2 class="about__title">Об аукционе</h2>
+        <span class="about__text">
+          <p>
+            Здесь вы не встретите очередное пафосное собрание невероятно
+            дорогого антиквариата. Наши лоты вообще не должны были попасть ни на
+            один аукцион. Потому что кому нужен дневник девочки-подростка или
+            картина, которую может нарисовать даже ребёнок? Кому нужны все эти
+            странные вещи, созданные любителями?
+            </p>
+          <br>
+          <p> Слишком сложные или, наоборот, слишком простые. Опережающие своё
+            время. В пух и прах растерзанные критиками. Непринятые и непонятые.
+            Когда-то они казались просто неудачными. Но, несмотря на критику,
+            кажущуюся простоту или сложность, сейчас без этих лотов невозможно
+            представить современную культуру. Когда в эти вещи не верил никто,
+            продолжали верить их создатели. И сейчас эти лоты стали культовыми.
+          </p>
+        </span>
+      </section>
     </main>
-    <footer></footer>
+    <footer>
+      <address class="header__address">
+        <section>
+          <a href="tel:+99995555555" class="address">+ 9 999 555 5555</a>
+          <br />
+          <a href="mailto:info@sobaka.ge" class="address">info@sobaka.ge</a>
+          <br />
+          <span>наб. Принсенграхт 263-265, Амстердам</span>
+        </section>
+      </address>
+    </footer>
   </body>
 </html>
