--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="UTF-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-    <link rel="stylesheet" href="./styles/global.css"/>
-    <link rel="stylesheet" href="./fonts/fonts.css"/>
-    <link rel="stylesheet" href="./styles/style.css"/>
+    <link rel="stylesheet" href="./styles/global.css" />
+    <link rel="stylesheet" href="./fonts/fonts.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
     <header class="header">
@@ -24,10 +24,9 @@
           </li>
         </ul>
       </nav>
-      <section class="header__logo">
+      <section class="header__logo-image">
         <a href="#0">
           <img
-            class="header__logo-image"
             src="./images/logo-black.svg"
             alt="логотип проекта 'оно тебе надо'"
           />
@@ -136,9 +135,10 @@
             один аукцион. Потому что кому нужен дневник девочки-подростка или
             картина, которую может нарисовать даже ребёнок? Кому нужны все эти
             странные вещи, созданные любителями?
-            </p>
-          <br>
-          <p> Слишком сложные или, наоборот, слишком простые. Опережающие своё
+          </p>
+          <br />
+          <p>
+            Слишком сложные или, наоборот, слишком простые. Опережающие своё
             время. В пух и прах растерзанные критиками. Непринятые и непонятые.
             Когда-то они казались просто неудачными. Но, несмотря на критику,
             кажущуюся простоту или сложность, сейчас без этих лотов невозможно
@@ -148,7 +148,7 @@
         </span>
       </section>
     </main>
-    <footer>
+    <footer class="footer">
       <address class="header__address">
         <section>
           <a href="tel:+99995555555" class="address">+ 9 999 555 5555</a>
@@ -158,6 +158,42 @@
           <span>наб. Принсенграхт 263-265, Амстердам</span>
         </section>
       </address>
+      <nav class="footer__menu">
+        <ul class="footer__menu-list">
+          <li>
+            <a class="footer__menu-link_active" href="#0">главная</a>
+          </li>
+          <li>
+            <a href="#0">посмотреть лоты</a>
+          </li>
+          <li class="footer__menu-list-item">
+            <a href="#0">об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+      <section class="footer__social-list">
+        <a href="https://www.youtube.com/"
+          ><img
+            class="footer__social-icon"
+            src="./images/yt.svg"
+            alt="иконка ютуб"
+          />
+        </a>
+        <a href="https://m.vk.com/">
+          <img
+            class="footer__social-icon"
+            src="./images/vk.svg"
+            alt="иконка вк"
+          />
+        </a>
+        <a href="https://ru.pinterest.com/">
+          <img
+            class="footer__social-icon"
+            src="./images/pinterest.svg"
+            alt="иконка пинтерест"
+          />
+        </a>
+      </section>
     </footer>
   </body>
 </html>
