--- a/index.html
+++ b/index.html
@@ -34,13 +34,11 @@
         </a>
       </section>
       <address class="header__address">
-        <section>
           <a href="tel:+99995555555" class="address">+ 9 999 555 5555</a>
           <br />
           <a href="mailto:info@sobaka.ge" class="address">info@sobaka.ge</a>
           <br />
           <span>наб. Принсенграхт 263-265, Амстердам</span>
-        </section>
       </address>
     </header>
     <main>
@@ -129,8 +127,7 @@
           />
         </div>
         <h2 class="about__title">Об аукционе</h2>
-        <span class="about__text">
-          <p>
+          <p class="about__text">
             Здесь вы не встретите очередное пафосное собрание невероятно
             дорогого антиквариата. Наши лоты вообще не должны были попасть ни на
             один аукцион. Потому что кому нужен дневник девочки-подростка или
@@ -138,7 +135,7 @@
             странные вещи, созданные любителями?
           </p>
           <br />
-          <p>
+          <p class="about__text">
             Слишком сложные или, наоборот, слишком простые. Опережающие своё
             время. В пух и прах растерзанные критиками. Непринятые и непонятые.
             Когда-то они казались просто неудачными. Но, несмотря на критику,
@@ -151,13 +148,11 @@
     </main>
     <footer class="footer">
       <address class="header__address">
-        <section>
           <a href="tel:+99995555555" class="address">+ 9 999 555 5555</a>
           <br />
           <a href="mailto:info@sobaka.ge" class="address">info@sobaka.ge</a>
           <br />
           <span>наб. Принсенграхт 263-265, Амстердам</span>
-        </section>
       </address>
       <nav class="footer__menu">
         <ul class="footer__menu-list">
