--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
           </a>
         </section>
         <address class="header__address">
-          <div> <a href="tel:+99995555555" class="address">+ 9 999 555 5555</a>
+          <div> 
+            <a href="tel:+99995555555" class="address">+ 9 999 555 5555</a>
             <br />
             <a href="mailto:info@sobaka.ge" class="address">info@sobaka.ge</a>
             <br />
