--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-    <link rel="stylesheet" href="./fonts/fonts.css" />
-    <link rel="stylesheet" href="./styles/global.css" />
-    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./fonts/fonts.css">
+    <link rel="stylesheet" href="./styles/global.css">
+    <link rel="stylesheet" href="./styles/style.css">
    
   </head>
   <body>
@@ -25,20 +25,20 @@
             </li>
           </ul>
         </nav>
-        <section class="header__logo-image">
+        <div class="header__logo-image">
           <a href="#0">
             <img
               src="./images/logo-black.svg"
               alt="логотип проекта 'оно тебе надо'"
             />
           </a>
-        </section>
+        </div>
         <address class="header__address">
           <div> 
             <a href="tel:+99995555555" class="address">+ 9 999 555 5555</a>
-            <br />
+            <br>
             <a href="mailto:info@sobaka.ge" class="address">info@sobaka.ge</a>
-            <br />
+            <br>
             <span>наб. Принсенграхт 263-265, Амстердам</span>
           </div>
         </address>
@@ -126,7 +126,7 @@
               class="about__logo-image"
               src="./images/logo-white.svg"
               alt="логотип проекта 'оно тебе надо'"
-            />
+            >
           </div>
           <h2 class="about__title">Об аукционе</h2>
           <div class="about__text">
