--- a/index.html
+++ b/index.html
@@ -24,21 +24,20 @@
           </li>
         </ul>
       </nav>
-      <div class="header__logo-image">
         <a href="#0">
           <img
+          class="header__logo-image"
             src="./images/logo-black.svg"
             alt="логотип проекта 'оно тебе надо'"
           />
         </a>
-      </div>
       <address class="header__address">
         <div>
           <a href="tel:+99995555555" class="address">+ 9 999 555 5555</a>
           <br />
           <a href="mailto:info@sobaka.ge" class="address">info@sobaka.ge</a>
           <br />
-          <span>наб. Принсенграхт 263-265, Амстердам</span>
+          <span>наб. Принсенграхт 263-265, <br/>Амстердам</span>
         </div>
       </address>
     </header>
@@ -68,7 +67,7 @@
         <h2 class="lots__heading">Лоты</h2>
         <ul class="lots__card-list">
           <li class="lots__card-list-item">
-            <a class="card-link">
+            <a>
               <article class="card card_type_film">
                 <div class="overlay"></div>
                 <h2 class="card__title">
@@ -149,13 +148,13 @@
       </section>
     </main>
     <footer class="footer">
-      <address class="header__address">
+      <address class="footer__address">
         <div>
           <a href="tel:+99995555555" class="address">+ 9 999 555 5555</a>
           <br />
           <a href="mailto:info@sobaka.ge" class="address">info@sobaka.ge</a>
           <br />
-          <span>наб. Принсенграхт 263-265, Амстердам</span>
+          <span>наб. Принсенграхт 263-265,<br/>Амстердам</span>
         </div>
       </address>
       <nav class="footer__menu">
