--- a/index.html
+++ b/index.html
@@ -24,21 +24,19 @@
           </li>
         </ul>
       </nav>
-        <a href="#0">
-          <img
+      <a href="#0">
+        <img
           class="header__logo-image"
-            src="./images/logo-black.svg"
-            alt="логотип проекта 'оно тебе надо'"
-          />
-        </a>
+          src="./images/logo-black.svg"
+          alt="логотип проекта 'оно тебе надо'"
+        />
+      </a>
       <address class="header__address">
-        <div>
-          <a href="tel:+99995555555" class="address">+ 9 999 555 5555</a>
-          <br />
-          <a href="mailto:info@sobaka.ge" class="address">info@sobaka.ge</a>
-          <br />
-          <span>наб. Принсенграхт 263-265, <br/>Амстердам</span>
-        </div>
+        <a href="tel:+99995555555" class="address">+ 9 999 555 5555</a>
+        <br />
+        <a href="mailto:info@sobaka.ge" class="address">info@sobaka.ge</a>
+        <br />
+        <span>наб. Принсенграхт 263-265, <br />Амстердам</span>
       </address>
     </header>
     <main>
@@ -60,7 +58,7 @@
           <p class="cover__description-text">
             Аукцион вещей, в которые никто не верил
           </p>
-          <button class="bet-button">сделать ставку</button>
+          <button type="button" class="bet-button">сделать ставку</button>
         </div>
       </section>
       <section class="lots">
@@ -70,9 +68,9 @@
             <a>
               <article class="card card_type_film">
                 <div class="overlay"></div>
-                <h2 class="card__title">
+                <h3 class="card__title">
                   Фильм режиссёра, который бросил киношколу
-                </h2>
+                </h3>
                 <p class="card__text">
                   Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
                   ставка, если бы вы не знали, что режиссёр — Пол Томас
@@ -135,7 +133,6 @@
             картина, которую может нарисовать даже ребёнок? Кому нужны все эти
             странные вещи, созданные любителями?
           </p>
-          <br />
           <p>
             Слишком сложные или, наоборот, слишком простые. Опережающие своё
             время. В пух и прах растерзанные критиками. Непринятые и непонятые.
@@ -154,7 +151,7 @@
           <br />
           <a href="mailto:info@sobaka.ge" class="address">info@sobaka.ge</a>
           <br />
-          <span>наб. Принсенграхт 263-265,<br/>Амстердам</span>
+          <span>наб. Принсенграхт 263-265,<br />Амстердам</span>
         </div>
       </address>
       <nav class="footer__menu">
